--- a/index.html
+++ b/index.html
@@ -26,7 +26,21 @@
     </div>
   </header>
 
+  <main class="introducao-bg">
+    <div class="introducao">
+      <div class="introducao-conteudo">
+        <h1>Bicicletas feita
+          sob medida<span>.</span></h1>
+        <p>Quando iniciamos a bikecreft queriamos apenas um produto que adorariamos utilizar. Eramos apaixonados por pedalar e também fazer</p>
 
+        <a href="./bicicletas.html">Selecione a sua</a>
+      </div>
+      <div>
+        <img src="/img/fotos/introducao.jpg" alt="Bicicletas elétrica preta">
+      </div>
+    </div>
+
+  </main>
 </body>
 
 </html>
