--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sib medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
   <link rel="stylesheet" href="/CSS/Style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Open+Sans:wght@300;400;600;700;800&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,9 +34,9 @@
       <div class="introducao-conteudo">
         <h1>Bicicletas feita
           sob medida<span>.</span></h1>
-        <p>Quando iniciamos a bikecreft queriamos apenas um produto que adorariamos utilizar. Eramos apaixonados por pedalar e também fazer</p>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
 
-        <a href="./bicicletas.html">Selecione a sua</a>
+        <a href="./bicicletas.html">Escolha a sua</a>
       </div>
       <div>
         <img src="/img/fotos/introducao.jpg" alt="Bicicletas elétrica preta">
