--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header">
       <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu cor-0 ">
           <li><a href="./Bicicletas.html">Bicicletas</a></li>
           <li><a href="./Seguros.html">Seguros</a></li>
           <li><a href="./Contato.html">Contato</a></li>
@@ -32,11 +32,11 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1>Bicicletas feita
-          sob medida<span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <h1 class="texto-grande cor-0 ">Bicicletas feita
+          sob medida<span class="cor-p1">.</span></h1>
+        <p class="texto-medio cor-5 ">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
 
-        <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+        <a class="botao" href="./bicicletas.html">Escolha a sua<span class="cor-p1">.</span></a>
       </div>
       <div>
         <img src="/img/fotos/introducao.jpg" alt="Bicicletas elétrica preta">
@@ -44,6 +44,8 @@
     </div>
 
   </main>
+
+  <h2 class="texto-grande">Escolha a sua<span class="cor-p1">.</span></h2>
 </body>
 
 </html>
