--- a/index.html
+++ b/index.html
@@ -45,33 +45,33 @@
 
   </main>
 
-  <article>
+  <article class="bicicletas-lista">
     <h2 class="font-1-xxl">Escolha a sua<span class="cor-p1">.</span></h2>
 
-    <ul class="bicicletas-lista">
+    <ul>
       <li>
         <a href="./bicicletas/magic.html">
           <img src="/img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="font-2-m cor-8">R$ 2499</span>
         </a>
-        <h3 class="font-1-xl">Magic Might</h3>
-        <span class="font-2-m cor-8">R$ 2499</span>
       </li>
 
       <li>
         <a href="./bicicletas/magic.html">
           <img src="/img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
         </a>
-        <h3 class="font-1-xl">Nimbus Stark</h3>
-        <span class="font-2-m cor-8">R$ 4999</span>
       </li>
 
       <li>
         <a href="./bicicletas/magic.html">
           <img src="/img/bicicletas/nebula.jpg" alt="Bicicleta preta">
-        </a>
-        <h3 class="font-1-xl">Nebula Cosmic</h3>
-        <span class="font-2-m cor-8">R$ 3999</span>
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 3999</span>
       </li>
+      </a>
     </ul>
 
 
