--- a/index.html
+++ b/index.html
@@ -173,6 +173,46 @@
 
   </article>
 
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="/img/bikcraft.svg" alt="Bikcraft">
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-0">Contato</h3>
+        <ul class="font-2-m cor-5">
+          <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
+          <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+          <li>Rua Ali perto, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="./">
+            <img src="/img/redes/instagram.svg" alt="instagram">
+          </a>
+          <a href="./">
+            <img src="/img/redes/facebook.svg" alt="facebook">
+          </a>
+          <a href="./">
+            <img src="/img/redes/youtube.svg" alt="youtube">
+          </a>
+        </div>
+
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-l-b cor-0">Informações</h3>
+        <nav>
+          <ul class="font-1-m cor-5">
+            <li><a href="./Bicicletas.html">Bicicletas</a></li>
+            <li><a href="./Seguros.html">Seguros</a></li>
+            <li><a href="./Contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
+          </ul>
+        </nav>
+
+      </div>
+      <p class="footer-copy font-2-m cor-6">Bikecraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
