--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0 ">
-          <li><a href="./Bicicletas.html">Bicicletas</a></li>
+          <li><a href="/Bicicleta.html">Bicicletas</a></li>
           <li><a href="./Seguros.html">Seguros</a></li>
           <li><a href="./Contato.html">Contato</a></li>
         </ul>
@@ -201,7 +201,7 @@
         <h3 class="font-2-l-b cor-0">Informações</h3>
         <nav>
           <ul class="font-1-m cor-5">
-            <li><a href="./Bicicletas.html">Bicicletas</a></li>
+            <li><a href="./Bicicleta.html">Bicicletas</a></li>
             <li><a href="./Seguros.html">Seguros</a></li>
             <li><a href="./Contato.html">Contato</a></li>
             <li><a href="./termos.html">Termos e Condições</a></li>
