--- a/Bicicletas.html
+++ b/Bicicletas.html
@@ -68,7 +68,7 @@
             Rastreador
           </li>
         </ul>
-        <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
+        <a class="botao seta" href="../bicicletas/nimbus.html">Mais Sobre</a>
       </div>
 
 
@@ -104,7 +104,7 @@
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
+          <a class="botao seta" href="../bicicletas/nebula.html">Mais Sobre</a>
         </div>
       </div>
 
@@ -139,7 +139,7 @@
             Rastreador
           </li>
         </ul>
-        <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
+        <a class="botao seta" href="../bicicletas/nebula.html">Mais Sobre</a>
       </div>
     </div>
 
