--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0 ">
-          <li><a href="/Bicicleta.html">Bicicletas</a></li>
+          <li><a href="./Bicicletas.html">Bicicletas</a></li>
           <li><a href="./Seguros.html">Seguros</a></li>
           <li><a href="./Contato.html">Contato</a></li>
         </ul>
@@ -52,23 +52,23 @@
     <ul>
       <li>
         <a href="./bicicletas/magic.html">
-          <img src="/img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          <img src="/img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
         </a>
       </li>
 
       <li>
-        <a href="./bicicletas/magic.html">
-          <img src="/img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+        <a href="./bicicletas/nimbus.html">
+          <img src="/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
 
       <li>
-        <a href="./bicicletas/magic.html">
-          <img src="/img/bicicletas/nebula.jpg" alt="Bicicleta preta">
+        <a href="./bicicletas/nebula.html">
+          <img src="/img/bicicletas/nebula-home.jpg" Bicicleta preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
       </li>
