--- a/Bicicletas.html
+++ b/Bicicletas.html
@@ -18,7 +18,7 @@
 <body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="index.html"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0 ">
           <li><a href="./Bicicletas.html">Bicicletas</a></li>
@@ -104,7 +104,7 @@
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="../bicicletas/nebula.html">Mais Sobre</a>
+          <a class="botao seta" href="../bicicletas/magic.html">Mais Sobre</a>
         </div>
       </div>
 
