--- a/orcamento.html
+++ b/orcamento.html
@@ -37,7 +37,7 @@
       </div>
 
     </div>
-    <form class="orcamento container" action="./">
+    <form class="orcamento container" action="./orcamento.html">
       <div class="orcamento-produto">
         <h2 class="font-1-xs cor-5">Bikcraft ou seguro?</h2>
 
