--- a/Bicicletas.html
+++ b/Bicicletas.html
@@ -8,6 +8,7 @@
   <title>Bicicletas | Bikcraft</title>
   <meta name="description" content="Bicicletas.">
 
+  <link rel="preloand" href="/CSS/Style.css" as="Style">
   <link rel="stylesheet" href="/CSS/Style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,7 @@
 <body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
-      <a href="index.html"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="index.html"><img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0 ">
           <li><a href="./Bicicletas.html">Bicicletas</a></li>
@@ -41,7 +42,7 @@
 
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="/img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+        <img src="/img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta">
         <span class="font-2-m cor-0">R$4999</span>
       </div>
       <div class="bicicletas-conteudo">
@@ -49,22 +50,22 @@
         <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
-            <img src="/img/icones/eletrica.svg" alt="">
+            <img src="/img/icones/eletrica.svg" width="24" height="24" alt="">
             Motor Elétrico
           </li>
 
           <li>
-            <img src="/img/icones/carbono.svg" alt="">
+            <img src="/img/icones/carbono.svg" width="24" height="24" alt="">
             Fibra de Carbono
           </li>
 
           <li>
-            <img src="/img/icones/velocidade.svg" alt="">
+            <img src="/img/icones/velocidade.svg" width="24" height="24" alt="">
             50 km/h
           </li>
 
           <li>
-            <img src="/img/icones/rastreador.svg" alt="">
+            <img src="/img/icones/rastreador.svg" width="24" height="24" alt="">
             Rastreador
           </li>
         </ul>
@@ -77,7 +78,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="/img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          <img src="/img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta">
           <span class="font-2-m cor-0">R$2499</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -85,22 +86,22 @@
           <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-5">
             <li>
-              <img src="/img/icones/eletrica.svg" alt="">
+              <img src="/img/icones/eletrica.svg" width="24" height="24" alt="">
               Motor Elétrico
             </li>
 
             <li>
-              <img src="/img/icones/carbono.svg" alt="">
+              <img src="/img/icones/carbono.svg" width="24" height="24" alt="">
               Fibra de Carbono
             </li>
 
             <li>
-              <img src="/img/icones/velocidade.svg" alt="">
+              <img src="/img/icones/velocidade.svg" width="24" height="24" alt="">
               45 km/h
             </li>
 
             <li>
-              <img src="/img/icones/rastreador.svg" alt="">
+              <img src="/img/icones/rastreador.svg" width="24" height="24" alt="">
               Rastreador
             </li>
           </ul>
@@ -112,7 +113,7 @@
 
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="/img/bicicletas/nebula.jpg" alt="Bicicleta preta">
+        <img src="/img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta">
         <span class="font-2-m cor-0">R$3999</span>
       </div>
       <div class="bicicletas-conteudo">
@@ -120,22 +121,22 @@
         <p class="font-2-s cor-8">A Nebula é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
-            <img src="/img/icones/eletrica.svg" alt="">
+            <img src="/img/icones/eletrica.svg" width="24" height="24" alt="">
             Motor Elétrico
           </li>
 
           <li>
-            <img src="/img/icones/carbono.svg" alt="">
+            <img src="/img/icones/carbono.svg" width="24" height="24" alt="">
             Fibra de Carbono
           </li>
 
           <li>
-            <img src="/img/icones/velocidade.svg" alt="">
+            <img src="/img/icones/velocidade.svg" width="24" height="24" alt="">
             50 km/h
           </li>
 
           <li>
-            <img src="/img/icones/rastreador.svg" alt="">
+            <img src="/img/icones/rastreador.svg" width="24" height="24" alt="">
             Rastreador
           </li>
         </ul>
@@ -149,7 +150,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="/img/bikcraft.svg" alt="Bikcraft">
+      <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -160,13 +161,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="/img/redes/instagram.svg" alt="instagram">
+            <img src="/img/redes/instagram.svg" width="32" height="32" alt="instagram">
           </a>
           <a href="./">
-            <img src="/img/redes/facebook.svg" alt="facebook">
+            <img src="/img/redes/facebook.svg" width="32" height="32" alt="facebook">
           </a>
           <a href="./">
-            <img src="/img/redes/youtube.svg" alt="youtube">
+            <img src="/img/redes/youtube.svg" width="32" height="32" alt="youtube">
           </a>
         </div>
 
