--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
   <title>Contato | Bikcraft</title>
   <meta name="description" content="Termos e Condições.">
 
+  <link rel="preloand" href="/CSS/Style.css" as="Style">
   <link rel="stylesheet" href="/CSS/Style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,7 @@
 <body id="contato">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0 ">
           <li><a href="./Bicicletas.html">Bicicletas</a></li>
@@ -52,13 +53,13 @@
         </address>
         <div class="contato-redes">
           <a href="./">
-            <img src="/img/redes/instagram-p.svg" alt="instagram">
+            <img src="/img/redes/instagram-p.svg" width="24" height="24" alt="instagram">
           </a>
           <a href="./">
-            <img src="/img/redes/facebook-p.svg" alt="facebook">
+            <img src="/img/redes/facebook-p.svg" width="24" height="24" alt="facebook">
           </a>
           <a href="./">
-            <img src="/img/redes/youtube-p.svg" alt="youtube">
+            <img src="/img/redes/youtube-p.svg" width="24" height="24" alt="youtube">
           </a>
         </div>
       </section>
@@ -88,7 +89,7 @@
   <article class="lojas container">
     <h2 class="font-1-xxl">Lojas locais<span class="cor-p1">.</span></h2>
     <div class="lojas-item">
-      <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
+      <img src="./img/lojas/rj.jpg" width="1120" height="520" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
       <div class="lojas-conteudo">
         <h3>Rio de Janeiro</h3>
         <div class="lojas-dados font-2-s cor-8">
@@ -99,12 +100,12 @@
           <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
           <a href="tel:+552199999999">+55 21 9999-9999</a>
         </div>
-        <p class="lojas-tempo font-1-s"><img src="/img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+        <p class="lojas-tempo font-1-s"><img src="/img/icones/horario.svg" width="20" height="20" alt="">08-18h de seg à dom</p>
       </div>
     </div>
 
     <div class="lojas-item">
-      <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
+      <img src="./img/lojas/sp.jpg" width="1120" height="520" alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
       <div class="lojas-conteudo">
         <h3>São Paulo</h3>
         <div class="lojas-dados font-2-s cor-8">
@@ -115,7 +116,7 @@
           <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
           <a href="tel:+552199999999">+55 11 9999-9999</a>
         </div>
-        <p class="lojas-tempo font-1-s"><img src="/img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+        <p class="lojas-tempo font-1-s"><img src="/img/icones/horario.svg" width="20" height="20" alt="">08-18h de seg à dom</p>
       </div>
     </div>
   </article>
@@ -123,7 +124,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="/img/bikcraft.svg" alt="Bikcraft">
+      <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -134,13 +135,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="/img/redes/instagram.svg" alt="instagram">
+            <img src="/img/redes/instagram.svg" width="24" height="24" alt="instagram">
           </a>
           <a href="./">
-            <img src="/img/redes/facebook.svg" alt="facebook">
+            <img src="/img/redes/facebook.svg" width="24" height="24" alt="facebook">
           </a>
           <a href="./">
-            <img src="/img/redes/youtube.svg" alt="youtube">
+            <img src="/img/redes/youtube.svg" width="24" height="24" alt="youtube">
           </a>
         </div>
 
