--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Bikcraft - Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sib medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
+  <link rel="preloand" href="/CSS/Style.css" as="Style">
   <link rel="stylesheet" href="/CSS/Style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,7 @@
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0 ">
           <li><a href="./Bicicletas.html">Bicicletas</a></li>
@@ -39,9 +40,10 @@
 
         <a class="botao" href="./bicicletas.html">Escolha a sua<span class="cor-p1">.</span></a>
       </div>
-      <div>
-        <img src="/img/fotos/introducao.jpg" alt="Bicicletas elétrica preta">
-      </div>
+      <picture>
+        <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
+        <img src="/img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicletas elétrica preta">
+      </picture>
     </div>
 
   </main>
@@ -52,7 +54,7 @@
     <ul>
       <li>
         <a href="./bicicletas/magic.html">
-          <img src="/img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+          <img src="/img/bicicletas/magic-home.jpg" width="920" height="1040" alt="Bicicleta preta">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
         </a>
@@ -60,7 +62,7 @@
 
       <li>
         <a href="./bicicletas/nimbus.html">
-          <img src="/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+          <img src="/img/bicicletas/nimbus-home.jpg" width="920" height="1040" alt="Bicicleta preta">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
         </a>
@@ -68,7 +70,7 @@
 
       <li>
         <a href="./bicicletas/nebula.html">
-          <img src="/img/bicicletas/nebula-home.jpg" Bicicleta preta">
+          <img src="/img/bicicletas/nebula-home.jpg" width="920" height="1040" Bicicleta preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
       </li>
@@ -87,19 +89,19 @@
 
         <div class="tecnologia-vantagens">
           <div>
-            <img src="/img/icones/eletrica.svg" alt="">
+            <img src="/img/icones/eletrica.svg" width="24" height="24" alt="">
             <h3 class="font-1-m cor-0">Motor Elétrico</h3>
             <p class="font-2-s cor-5">Toda Bikecraft e equipada com um motor eletrico que possui duração de ate 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
           </div>
           <div>
-            <img src="/img/icones/rastreador.svg" alt="">
+            <img src="/img/icones/rastreador.svg" width="24" height="24" alt="">
             <h3 class="font-1-m cor-0">Rastreador</h3>
             <p class="font-2-s cor-5">Sabemos o quão precioso é a sua Bikecraft, por isso adicionamos rastreadores e sistema anti-furto para garantir o seu sossego.</p>
           </div>
         </div>
       </div>
       <div class="tecnologia-imagem">
-        <img src="/img/fotos/tecnologia.jpg" alt="">
+        <img src="/img/fotos/tecnologia.jpg" width="1200" height="1920" alt="">
       </div>
     </div>
     </div>
@@ -110,14 +112,14 @@
     <h2 class=" container font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
 
     <ul>
-      <li><img src="/img/parceiros/caravan.svg" alt="Caravan"></li>
-      <li><img src="/img/parceiros/ranek.svg" alt="ranek"></li>
-      <li><img src="/img/parceiros/handel.svg" alt="handel"></li>
-      <li><img src="/img/parceiros/dogs.svg" alt="dogs"></li>
-      <li><img src="/img/parceiros/lescone.svg" alt="lescone"></li>
-      <li><img src="/img/parceiros/flexblog.svg" alt="flexblog"></li>
-      <li><img src="/img/parceiros/wildbeast.svg" alt="wildbeast"></li>
-      <li><img src="/img/parceiros/surfbot.svg" alt="surfbot"></li>
+      <li><img src="/img/parceiros/caravan.svg" width="140" height="38" alt="Caravan"></li>
+      <li><img src="/img/parceiros/ranek.svg" width="149" height="36" alt="ranek"></li>
+      <li><img src="/img/parceiros/handel.svg" width="139" height="50" alt="handel"></li>
+      <li><img src="/img/parceiros/dogs.svg" width="152" height="39" alt="dogs"></li>
+      <li><img src="/img/parceiros/lescone.svg" width="208" height="41" alt="lescone"></li>
+      <li><img src="/img/parceiros/flexblog.svg" width="165" height="38" alt="flexblog"></li>
+      <li><img src="/img/parceiros/wildbeast.svg" width="196" height="34" alt="wildbeast"></li>
+      <li><img src="/img/parceiros/surfbot.svg" width="200" height="49" alt="surfbot"></li>
 
 
     </ul>
@@ -125,7 +127,7 @@
 
   <section class="depoimento" aria-label="Depoimento">
     <div>
-      <img src="/img/fotos/depoimento.jpg" alt="Pedalando uma bicicleta Bikcraft">
+      <img src="/img/fotos/depoimento.jpg" width="1560" height="1360" alt="Pedalando uma bicicleta Bikcraft">
     </div>
     <div class="depoimento-conteudo">
       <blockquote class="font-1-xl cor-p5">
@@ -175,7 +177,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="/img/bikcraft.svg" alt="Bikcraft">
+      <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -186,13 +188,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="/img/redes/instagram.svg" alt="instagram">
+            <img src="/img/redes/instagram.svg" width="32" height="32" alt="instagram">
           </a>
           <a href="./">
-            <img src="/img/redes/facebook.svg" alt="facebook">
+            <img src="/img/redes/facebook.svg" width="32" height="32" alt="facebook">
           </a>
           <a href="./">
-            <img src="/img/redes/youtube.svg" alt="youtube">
+            <img src="/img/redes/youtube.svg" width="32" height="32" alt="youtube">
           </a>
         </div>
 
