--- a/termos.html
+++ b/termos.html
@@ -8,6 +8,7 @@
   <title>Termos e Condições | Bikcraft</title>
   <meta name="description" content="Termos e Condições.">
 
+  <link rel="preloand" href="/CSS/Style.css" as="Style">
   <link rel="stylesheet" href="/CSS/Style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
