--- a/orcamento.html
+++ b/orcamento.html
@@ -19,7 +19,7 @@
 <body id="orcamento">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0 ">
           <li><a href="./Bicicletas.html">Bicicletas</a></li>
@@ -55,10 +55,10 @@
           <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
           <div class="orcamento-detalhes">
             <ul class="font-1-xs cor-8">
-              <li><img src="./img/icones/eletrica.svg" alt="">Motor Eletrico</li>
-              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-              <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
-              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="./img/icones/eletrica.svg" width="24" height="24" alt="">Motor Eletrico</li>
+              <li><img src="./img/icones/carbono.svg" width="24" height="24" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" width="24" height="24" alt="">50 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" width="24" height="24" alt="">Rastreador</li>
             </ul>
             <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
           </div>
@@ -68,10 +68,10 @@
           <label for="magic">Magic Might <span>R$ 2499</span></label>
           <div class="orcamento-detalhes">
             <ul class="font-1-xs cor-8">
-              <li><img src="./img/icones/eletrica.svg" alt="">Motor Eletrico</li>
-              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-              <li><img src="./img/icones/velocidade.svg" alt="">45 km/h</li>
-              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="./img/icones/eletrica.svg" width="24" height="24" alt="">Motor Eletrico</li>
+              <li><img src="./img/icones/carbono.svg" width="24" height="24" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" width="24" height="24" alt="">45 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" width="24" height="24" alt="">Rastreador</li>
             </ul>
             <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
           </div>
@@ -81,12 +81,12 @@
           <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
           <div class="orcamento-detalhes">
             <ul class="font-1-xs cor-8">
-              <li><img src="./img/icones/eletrica.svg" alt="">Motor Eletrico</li>
-              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-              <li><img src="./img/icones/velocidade.svg" alt="">40 km/h</li>
-              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="./img/icones/eletrica.svg" width="24" height="24" alt="">Motor Eletrico</li>
+              <li><img src="./img/icones/carbono.svg" width="24" height="24" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" width="24" height="24" alt="">40 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" width="24" height="24" alt="">Rastreador</li>
             </ul>
-            <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta branca">
+            <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta branca">
           </div>
 
         </div>
@@ -155,7 +155,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="/img/bikcraft.svg" alt="Bikcraft">
+      <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -166,13 +166,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="/img/redes/instagram.svg" alt="instagram">
+            <img src="/img/redes/instagram.svg" width="32" height="32" alt="instagram">
           </a>
           <a href="./">
-            <img src="/img/redes/facebook.svg" alt="facebook">
+            <img src="/img/redes/facebook.svg" width="32" height="32" alt="facebook">
           </a>
           <a href="./">
-            <img src="/img/redes/youtube.svg" alt="youtube">
+            <img src="/img/redes/youtube.svg" width="32" height="32" alt="youtube">
           </a>
         </div>
 
