--- a/termos.html
+++ b/termos.html
@@ -19,7 +19,7 @@
 <body id="termos">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0 ">
           <li><a href="./Bicicletas.html">Bicicletas</a></li>
@@ -62,7 +62,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="/img/bikcraft.svg" alt="Bikcraft">
+      <img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -73,13 +73,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="/img/redes/instagram.svg" alt="instagram">
+            <img src="/img/redes/instagram.svg" width="32" height="32" alt="instagram">
           </a>
           <a href="./">
-            <img src="/img/redes/facebook.svg" alt="facebook">
+            <img src="/img/redes/facebook.svg" width="32" height="32" alt="facebook">
           </a>
           <a href="./">
-            <img src="/img/redes/youtube.svg" alt="youtube">
+            <img src="/img/redes/youtube.svg" width="32" height="32" alt="youtube">
           </a>
         </div>
 
